# Grid-Decarbonisation-Planning-RAG

./: README.md  api.py  app.py  config.py  ingest.py  main.py  pyproject.toml  rag_chain.py  requirements.txt
chroma_db/: chroma.sqlite3
data/ecostuxure/: ecostruxure_grid_overview.txt
data/forecasts/: feeder_load_forecast_2024.csv  solar_ev_load_forecast_2024_2030.txt
data/grid_platform/: ecostruxure_grid_overview.txt
data/policies/: rdss_scheme_guidelines.txt  solar_rppo_targets.txt
data/regulations/: cea_regulations_2023.txt
data/roadmaps/: india_grid_decarb_roadmap_2030.txt
