[project]
name = "grid-decarbonisation-planning-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "openpyxl>=3.1.5",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]
